HVAC Backup 2/objects/Update_Request__c.object
<CustomObject>
    <description>To store the account update requests.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_New_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address New Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Update Requests (Address New Account)</relationshipLabel>
        <relationshipName>Update_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>Address</referenceTo>
        <relationshipLabel>Update Requests</relationshipLabel>
        <relationshipName>Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Update_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the person who approves the request.</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Update Requests</relationshipLabel>
        <relationshipName>Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cellphone_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cellphone Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type_Id__c</fullName>
        <label>Contact Record Type Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Update Requests</relationshipLabel>
        <relationshipName>Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Update Requests</relationshipLabel>
        <relationshipName>Update_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <formula>TEXT(Customer__r.Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Flat__c</fullName>
        <label>New House Flat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_City__c</fullName>
        <label>New City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Country__c</fullName>
        <label>New Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Email__c</fullName>
        <label>New Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_First_Name__c</fullName>
        <label>New First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_GST_Number__c</fullName>
        <label>New GST Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Last_Name__c</fullName>
        <label>New Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Locality__c</fullName>
        <label>New Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_PAN_Number__c</fullName>
        <label>New PAN Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Phone__c</fullName>
        <label>New Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_Postal_Code__c</fullName>
        <label>New Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Role__c</fullName>
        <label>New Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sector__c</fullName>
        <label>New Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_State__c</fullName>
        <label>New State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Street__c</fullName>
        <label>New Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Sub_Locality__c</fullName>
        <label>New Sub Locality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_TAN_Number__c</fullName>
        <label>New TAN Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Account_Name__c</fullName>
        <label>Old Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_CellPhone_Not_Allowed__c</fullName>
        <label>CellPhone Not Allowed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Allowed</fullName>
                </value>
                <value>
                    <fullName>Outside Perimeter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Email__c</fullName>
        <label>Old Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Old_First_Name__c</fullName>
        <label>Old First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_GST_Number__c</fullName>
        <label>Old GST Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Last_Name__c</fullName>
        <label>Old Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_PAN_Number__c</fullName>
        <label>Old PAN Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Phone__c</fullName>
        <label>Old Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Old_Role__c</fullName>
        <label>Old Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_TAN_Number__c</fullName>
        <label>Old TAN Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Radius_Unit__c</fullName>
        <label>Radius Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
                <value>
                    <fullName>Meters</fullName>
                </value>
                <value>
                    <fullName>Miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Radius__c</fullName>
        <label>Radius</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Update_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Update Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CBO_Queue_Update_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>CBO Queue</label>
        <queue>CBO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CBO_Queue_Update_Request1</fullName>
        <filterScope>Queue</filterScope>
        <label>CBO Queue</label>
        <queue>CBO_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Request-{0000}</displayFormat>
        <label>Update Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Update Requests</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Account_Update</fullName>
        <active>true</active>
        <label>Commercial Account Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Commercial_Update</fullName>
        <active>true</active>
        <label>Commercial Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Account_Update</fullName>
        <active>true</active>
        <label>Contact Account Update</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Update</fullName>
        <active>true</active>
        <label>Contact Update</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Name_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISNEW() &amp;&amp; NOT(ISBLANK(Account_Name__c))) &amp;&amp; 

(NOT(REGEX( Account_Name__c , &quot;^(?![\\W_]*$)[A-Za-z0-9\\s\\-\\&amp;\\(\\)\\{\\}\\[\\]]+$&quot;)) ||

NOT(REGEX(Account_Name__c , &quot;.*[A-Za-z].*&quot;)) )</errorConditionFormula>
        <errorMessage>Account Name can only contain letters, numbers, spaces, hyphens, ampersands, and brackets. It must also include at least one character.</errorMessage>
    </validationRules>
</CustomObject>